new unit test for custom diploids + metapopulations

--- a/unit/Makefile.am
+++ b/unit/Makefile.am
@@ -13,7 +13,8 @@ check_PROGRAMS=mutateTest \
 	sugar1_custom \
 	ms_sampling \
 	sugar_sampling \
-	callbacks
+	callbacks \
+	sugar2_custom
 
 TESTS=$(check_PROGRAMS)
 
@@ -28,6 +29,7 @@ sugar1_SOURCES=sugar1.cc
 sugar2_SOURCES=sugar2.cc
 sugar3_SOURCES=sugar3.cc
 sugar1_custom_SOURCES=sugar1_custom.cc
+sugar2_custom_SOURCES=sugar2_custom.cc
 ms_sampling_SOURCES=ms_sampling.cc
 sugar_sampling_SOURCES=sugar_sampling.cc
 callbacks_SOURCES=callbacks.cc
