--- a/unit/Makefile.in
+++ b/unit/Makefile.in
@@ -88,7 +88,8 @@ POST_UNINSTALL = :
 @BUNIT_TEST_LIB_PRESENT_TRUE@	ms_sampling$(EXEEXT) \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_sampling$(EXEEXT) \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	callbacks$(EXEEXT) \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar2_custom$(EXEEXT)
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar2_custom$(EXEEXT) \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	test_generalmut$(EXEEXT)
 @BUNIT_TEST_LIB_PRESENT_TRUE@am__append_1 = $(AM_LIBS)
 subdir = unit
 DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/Makefile.am \
@@ -174,6 +175,11 @@ am__sugar_sampling_SOURCES_DIST = sugar_sampling.cc
 @BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_sampling.$(OBJEXT)
 sugar_sampling_OBJECTS = $(am_sugar_sampling_OBJECTS)
 sugar_sampling_LDADD = $(LDADD)
+am__test_generalmut_SOURCES_DIST = test_generalmut.cc
+@BUNIT_TEST_LIB_PRESENT_TRUE@am_test_generalmut_OBJECTS =  \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	test_generalmut.$(OBJEXT)
+test_generalmut_OBJECTS = $(am_test_generalmut_OBJECTS)
+test_generalmut_LDADD = $(LDADD)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -210,7 +216,7 @@ SOURCES = $(callbacks_SOURCES) $(crossoverTest_SOURCES) \
 	$(siteDepFitness_SOURCES) $(sugar1_SOURCES) \
 	$(sugar1_custom_SOURCES) $(sugar2_SOURCES) \
 	$(sugar2_custom_SOURCES) $(sugar3_SOURCES) \
-	$(sugar_sampling_SOURCES)
+	$(sugar_sampling_SOURCES) $(test_generalmut_SOURCES)
 DIST_SOURCES = $(am__callbacks_SOURCES_DIST) \
 	$(am__crossoverTest_SOURCES_DIST) \
 	$(am__gameteTest_SOURCES_DIST) \
@@ -221,7 +227,8 @@ DIST_SOURCES = $(am__callbacks_SOURCES_DIST) \
 	$(am__siteDepFitness_SOURCES_DIST) $(am__sugar1_SOURCES_DIST) \
 	$(am__sugar1_custom_SOURCES_DIST) $(am__sugar2_SOURCES_DIST) \
 	$(am__sugar2_custom_SOURCES_DIST) $(am__sugar3_SOURCES_DIST) \
-	$(am__sugar_sampling_SOURCES_DIST)
+	$(am__sugar_sampling_SOURCES_DIST) \
+	$(am__test_generalmut_SOURCES_DIST)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -560,6 +567,7 @@ top_srcdir = @top_srcdir@
 @BUNIT_TEST_LIB_PRESENT_TRUE@ms_sampling_SOURCES = ms_sampling.cc
 @BUNIT_TEST_LIB_PRESENT_TRUE@sugar_sampling_SOURCES = sugar_sampling.cc
 @BUNIT_TEST_LIB_PRESENT_TRUE@callbacks_SOURCES = callbacks.cc
+@BUNIT_TEST_LIB_PRESENT_TRUE@test_generalmut_SOURCES = test_generalmut.cc
 @BUNIT_TEST_LIB_PRESENT_TRUE@AM_CXXFLAGS = 
 @BUNIT_TEST_LIB_PRESENT_TRUE@AM_LIBS = -lboost_unit_test_framework
 all: all-am
@@ -660,6 +668,10 @@ sugar_sampling$(EXEEXT): $(sugar_sampling_OBJECTS) $(sugar_sampling_DEPENDENCIES
 	@rm -f sugar_sampling$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(sugar_sampling_OBJECTS) $(sugar_sampling_LDADD) $(LIBS)
 
+test_generalmut$(EXEEXT): $(test_generalmut_OBJECTS) $(test_generalmut_DEPENDENCIES) $(EXTRA_test_generalmut_DEPENDENCIES) 
+	@rm -f test_generalmut$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(test_generalmut_OBJECTS) $(test_generalmut_LDADD) $(LIBS)
+
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
 
@@ -681,6 +693,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar2_custom.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar3.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_sampling.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_generalmut.Po@am__quote@
 
 .cc.o:
 @am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXXCOMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
@@ -990,6 +1003,13 @@ callbacks.log: callbacks$(EXEEXT)
 sugar2_custom.log: sugar2_custom$(EXEEXT)
 	@p='sugar2_custom$(EXEEXT)'; \
 	b='sugar2_custom'; \
+	$(am__check_pre) $(LOG_DRIVER) --test-name "$$f" \
+	--log-file $$b.log --trs-file $$b.trs \
+	$(am__common_driver_flags) $(AM_LOG_DRIVER_FLAGS) $(LOG_DRIVER_FLAGS) -- $(LOG_COMPILE) \
+	"$$tst" $(AM_TESTS_FD_REDIRECT)
+test_generalmut.log: test_generalmut$(EXEEXT)
+	@p='test_generalmut$(EXEEXT)'; \
+	b='test_generalmut'; \
 	$(am__check_pre) $(LOG_DRIVER) --test-name "$$f" \
 	--log-file $$b.log --trs-file $$b.trs \
 	$(am__common_driver_flags) $(AM_LOG_DRIVER_FLAGS) $(LOG_DRIVER_FLAGS) -- $(LOG_COMPILE) \
