--- a/fwdpp/internal/Makefile.am
+++ b/fwdpp/internal/Makefile.am
@@ -9,5 +9,6 @@ pkginclude_HEADERS=mutation_internal.hpp \
 	ms_sampling.hpp \
 	diploid_fitness_dispatch.hpp \
 	gamete_lookup_table.hpp \
-	gamete_cleaner.hpp
+	gamete_cleaner.hpp \
+	recycling.hpp
 
