--- a/fwdpp/internal/Makefile.in
+++ b/fwdpp/internal/Makefile.in
@@ -258,7 +258,8 @@ pkginclude_HEADERS = mutation_internal.hpp \
 	ms_sampling.hpp \
 	diploid_fitness_dispatch.hpp \
 	gamete_lookup_table.hpp \
-	gamete_cleaner.hpp
+	gamete_cleaner.hpp \
+	recycling.hpp
 
 all: all-am
 
