--- a/fwdpp/internal/Makefile.am
+++ b/fwdpp/internal/Makefile.am
@@ -10,5 +10,6 @@ pkginclude_HEADERS=mutation_internal.hpp \
 	diploid_fitness_dispatch.hpp \
 	gamete_lookup_table.hpp \
 	gamete_cleaner.hpp \
-	recycling.hpp
+	recycling.hpp \
+	sample_diploid_helpers.hpp
 
