--- a/fwdpp/tags/Makefile.in
+++ b/fwdpp/tags/Makefile.in
@@ -249,7 +249,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-pkginclude_HEADERS = gamete_tags.hpp diploid_tags.hpp
+pkginclude_HEADERS = gamete_tags.hpp diploid_tags.hpp tags.hpp
 all: all-am
 
 .SUFFIXES:
