internal/type_traits.hpp now installed

--- a/fwdpp/internal/Makefile.in
+++ b/fwdpp/internal/Makefile.in
@@ -260,7 +260,8 @@ pkginclude_HEADERS = mutation_internal.hpp \
 	gamete_lookup_table.hpp \
 	gamete_cleaner.hpp \
 	recycling.hpp \
-	sample_diploid_helpers.hpp
+	sample_diploid_helpers.hpp \
+	type_traits.hpp
 
 all: all-am
 
