added new unit test for extentions

--- a/unit/Makefile.am
+++ b/unit/Makefile.am
@@ -15,7 +15,8 @@ check_PROGRAMS=mutateTest \
 	callbacks \
 	sugar2_custom \
 	test_generalmut \
-	test_generalmut_vec
+	test_generalmut_vec \
+	extensions
 
 
 TESTS=$(check_PROGRAMS)
@@ -36,6 +37,7 @@ sugar_sampling_SOURCES=sugar_sampling.cc
 callbacks_SOURCES=callbacks.cc
 test_generalmut_SOURCES=test_generalmut.cc
 test_generalmut_vec_SOURCES=test_generalmut_vec.cc
+extensions_SOURCES=extensions.cc
 
 AM_CXXFLAGS=
 
