--- a/fwdpp/Makefile.in
+++ b/fwdpp/Makefile.in
@@ -310,7 +310,8 @@ pkginclude_HEADERS = debug.hpp \
 	sampling_functions.tcc \
 	type_traits.hpp \
 	util.hpp \
-	sugar.hpp
+	sugar.hpp \
+	demography.hpp
 
 all: all-recursive
 
