low-level demographic functions added

--- a/fwdpp/internal/Makefile.in
+++ b/fwdpp/internal/Makefile.in
@@ -261,7 +261,8 @@ pkginclude_HEADERS = mutation_internal.hpp \
 	gamete_cleaner.hpp \
 	recycling.hpp \
 	sample_diploid_helpers.hpp \
-	type_traits.hpp
+	type_traits.hpp \
+	demography_details.hpp
 
 all: all-am
 
